Version 12 - Agrega logica para crear archivo de logs